player can change turns now

--- a/index.html
+++ b/index.html
@@ -68,12 +68,19 @@
           <tbody id="points_table_body"></tbody>
         </table>
 
+        // Track Turns
+        <section>
+          <h3>Player Turn</h3>
+          <article id="player_turn_tracker"></article>
+          <button id="change_turn_btn">Change Turn</button>
+        </section>
+
         <section id="dice_roll_section">
-          <article id="dice_1">Dice One</article>
-          <article id="dice_2">Dice Two</article>
-          <article id="dice_3">Dice Three</article>
-          <article id="dice_4">Dice Four</article>
-          <article id="dice_5">Dice Five</article>
+          <article id="dice_1" class="game_dice">Dice One</article>
+          <article id="dice_2" class="game_dice">Dice Two</article>
+          <article id="dice_3" class="game_dice">Dice Three</article>
+          <article id="dice_4" class="game_dice">Dice Four</article>
+          <article id="dice_5" class="game_dice">Dice Five</article>
           <button id="roll_dice_btn">Roll</button>
         </section>
       </section>
