--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           <button id="change_turn_btn">Change Turn</button>
         </section>
 
-        <section id="dice_roll_section">
+        <div id="dice_roll_section">
           <article id="dice_1" class="game_dice">Dice One</article>
           <article id="dice_2" class="game_dice">Dice Two</article>
           <article id="dice_3" class="game_dice">Dice Three</article>
           <article id="dice_4" class="game_dice">Dice Four</article>
           <article id="dice_5" class="game_dice">Dice Five</article>
-          <button id="roll_dice_btn">Roll</button>
-        </section>
+        </div>
+        <button id="roll_dice_btn">Roll</button>
       </section>
 
       <section id="score_board">Game over</section>
